--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -15,15 +15,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/seaborn/apionly.py:6: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
+      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/seaborn/apionly.py:6: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
       "  warnings.warn(msg, UserWarning)\n"
      ]
     }
@@ -36,6 +34,8 @@
     "from pymoc import MOC\n",
     "\n",
     "from herschelhelp_internal.masterlist import find_last_ml_suffix\n",
+    "\n",
+    "import yaml\n",
     "\n",
     "import os\n",
     "\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -63,38 +63,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table140000904617320-525715\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4709190344-918720\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th></tr></thead>\n",
-       "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td></tr>\n",
-       "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>8.713306475131118</td><td>538606080</td><td>538.61 MB</td></tr>\n",
-       "<tr><td>2</td><td>Bootes</td><td>20180520</td><td>20180520</td><td>3481661</td><td>11.42815299095486</td><td>5002044480</td><td>5 GB</td></tr>\n",
-       "<tr><td>3</td><td>CDFS-SWIRE</td><td>20180613</td><td>20180613</td><td>2171051</td><td>12.971246403717068</td><td>5705593920</td><td>5.71 GB</td></tr>\n",
-       "<tr><td>4</td><td>COSMOS</td><td>20180619</td><td>20180619</td><td>2599374</td><td>5.083863478496816</td><td>10517175360</td><td>10.52 GB</td></tr>\n",
-       "<tr><td>5</td><td>EGS</td><td>20180501</td><td>20180501</td><td>1412613</td><td>3.566383275122158</td><td>3808480320</td><td>3.81 GB</td></tr>\n",
-       "<tr><td>6</td><td>ELAIS-N1</td><td>20171016</td><td>20180216</td><td>4026292</td><td>13.507484555454763</td><td>5242279680</td><td>5.24 GB</td></tr>\n",
-       "<tr><td>7</td><td>ELAIS-N2</td><td>20180218</td><td>20180218</td><td>1783240</td><td>9.167479903991113</td><td>2007964800</td><td>2.01 GB</td></tr>\n",
-       "<tr><td>8</td><td>ELAIS-S1</td><td>20180416</td><td>20180416</td><td>1655564</td><td>9.002940646885508</td><td>1970156160</td><td>1.97 GB</td></tr>\n",
-       "<tr><td>9</td><td>GAMA-09</td><td>20180601</td><td>20180601</td><td>12937982</td><td>62.01393417284915</td><td>19911611520</td><td>19.91 GB</td></tr>\n",
-       "<tr><td>10</td><td>GAMA-12</td><td>20180218</td><td>20180218</td><td>12369415</td><td>62.70933280772107</td><td>14633066880</td><td>14.63 GB</td></tr>\n",
-       "<tr><td>11</td><td>GAMA-15</td><td>20180213</td><td>20180213</td><td>14232880</td><td>61.70114565980842</td><td>16595585280</td><td>16.6 GB</td></tr>\n",
-       "<tr><td>12</td><td>HDF-N</td><td>20180427</td><td>20180427</td><td>130679</td><td>0.6717832558166041</td><td>185996160</td><td>186 MB</td></tr>\n",
-       "<tr><td>13</td><td>Herschel-Stripe-82</td><td>20180307</td><td>20180307</td><td>50196455</td><td>363.22747930641884</td><td>127047306240</td><td>127.05 GB</td></tr>\n",
-       "<tr><td>14</td><td>Lockman-SWIRE</td><td>20180219</td><td>20180219</td><td>4366298</td><td>22.413863402949218</td><td>5195931840</td><td>5.2 GB</td></tr>\n",
-       "<tr><td>15</td><td>NGP</td><td>20180219</td><td>20180501</td><td>6759591</td><td>177.6981971077162</td><td>4954806720</td><td>4.95 GB</td></tr>\n",
-       "<tr><td>16</td><td>SA13</td><td>20180501</td><td>20180501</td><td>9799</td><td>0.27416379328431184</td><td>2721600</td><td>2.72 MB</td></tr>\n",
-       "<tr><td>17</td><td>SGP</td><td>20180221</td><td>20180221</td><td>29790690</td><td>294.5684540900642</td><td>45192530880</td><td>45.19 GB</td></tr>\n",
-       "<tr><td>18</td><td>SPIRE-NEP</td><td>20180220</td><td>20180220</td><td>2674</td><td>0.1280660469377391</td><td>1203840</td><td>1.2 MB</td></tr>\n",
-       "<tr><td>19</td><td>SSDF</td><td>20180221</td><td>20180221</td><td>12661903</td><td>111.11624949343539</td><td>8078319360</td><td>8.08 GB</td></tr>\n",
-       "<tr><td>20</td><td>xFLS</td><td>20180501</td><td>20180501</td><td>977148</td><td>7.44043242140754</td><td>1050474240</td><td>1.05 GB</td></tr>\n",
-       "<tr><td>21</td><td>XMM-13hr</td><td>20180501</td><td>20180501</td><td>38629</td><td>0.7570240166583633</td><td>10676160</td><td>10.68 MB</td></tr>\n",
-       "<tr><td>22</td><td>XMM-LSS</td><td>20180504</td><td>20180504</td><td>8705837</td><td>21.75457939331374</td><td>28241838720</td><td>28.24 GB</td></tr>\n",
+       "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.19473235878</td><td>348848640</td><td>348.85 MB</td></tr>\n",
+       "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>8.71330647513</td><td>538606080</td><td>538.61 MB</td></tr>\n",
+       "<tr><td>2</td><td>Bootes</td><td>20180520</td><td>20180520</td><td>3481661</td><td>11.428152991</td><td>5002044480</td><td>5 GB</td></tr>\n",
+       "<tr><td>3</td><td>CDFS-SWIRE</td><td>20180613</td><td>20180613</td><td>2171051</td><td>12.9712464037</td><td>5705593920</td><td>5.71 GB</td></tr>\n",
+       "<tr><td>4</td><td>COSMOS</td><td>20180619</td><td>20180619</td><td>2599374</td><td>5.0838634785</td><td>10517175360</td><td>10.52 GB</td></tr>\n",
+       "<tr><td>5</td><td>EGS</td><td>20180501</td><td>20180501</td><td>1412613</td><td>3.56638327512</td><td>3808480320</td><td>3.81 GB</td></tr>\n",
+       "<tr><td>6</td><td>ELAIS-N1</td><td>20171016</td><td>20180216</td><td>4026292</td><td>13.5074845555</td><td>5242279680</td><td>5.24 GB</td></tr>\n",
+       "<tr><td>7</td><td>ELAIS-N2</td><td>20180218</td><td>20180218</td><td>1783240</td><td>9.16747990399</td><td>2007964800</td><td>2.01 GB</td></tr>\n",
+       "<tr><td>8</td><td>ELAIS-S1</td><td>20180416</td><td>20180416</td><td>1655564</td><td>9.00294064689</td><td>1970156160</td><td>1.97 GB</td></tr>\n",
+       "<tr><td>9</td><td>GAMA-09</td><td>20180601</td><td>20180601</td><td>12937982</td><td>62.0139341728</td><td>19911611520</td><td>19.91 GB</td></tr>\n",
+       "<tr><td>10</td><td>GAMA-12</td><td>20180218</td><td>20180218</td><td>12369415</td><td>62.7093328077</td><td>14633066880</td><td>14.63 GB</td></tr>\n",
+       "<tr><td>11</td><td>GAMA-15</td><td>20180213</td><td>20180213</td><td>14232880</td><td>61.7011456598</td><td>16595585280</td><td>16.6 GB</td></tr>\n",
+       "<tr><td>12</td><td>HDF-N</td><td>20180427</td><td>20180427</td><td>130679</td><td>0.671783255817</td><td>185996160</td><td>186 MB</td></tr>\n",
+       "<tr><td>13</td><td>Herschel-Stripe-82</td><td>20180307</td><td>20180307</td><td>50196455</td><td>363.227479306</td><td>127047306240</td><td>127.05 GB</td></tr>\n",
+       "<tr><td>14</td><td>Lockman-SWIRE</td><td>20180219</td><td>20180219</td><td>4366298</td><td>22.4138634029</td><td>5195931840</td><td>5.2 GB</td></tr>\n",
+       "<tr><td>15</td><td>NGP</td><td>20180219</td><td>20180501</td><td>6759591</td><td>177.698197108</td><td>4954806720</td><td>4.95 GB</td></tr>\n",
+       "<tr><td>16</td><td>SA13</td><td>20180501</td><td>20180501</td><td>9799</td><td>0.274163793284</td><td>2721600</td><td>2.72 MB</td></tr>\n",
+       "<tr><td>17</td><td>SGP</td><td>20180221</td><td>20180221</td><td>29790690</td><td>294.56845409</td><td>45192530880</td><td>45.19 GB</td></tr>\n",
+       "<tr><td>18</td><td>SPIRE-NEP</td><td>20180220</td><td>20180220</td><td>2674</td><td>0.128066046938</td><td>1203840</td><td>1.2 MB</td></tr>\n",
+       "<tr><td>19</td><td>SSDF</td><td>20180221</td><td>20180221</td><td>12661903</td><td>111.116249493</td><td>8078319360</td><td>8.08 GB</td></tr>\n",
+       "<tr><td>20</td><td>xFLS</td><td>20180501</td><td>20180501</td><td>977148</td><td>7.44043242141</td><td>1050474240</td><td>1.05 GB</td></tr>\n",
+       "<tr><td>21</td><td>XMM-13hr</td><td>20180501</td><td>20180501</td><td>38629</td><td>0.757024016658</td><td>10676160</td><td>10.68 MB</td></tr>\n",
+       "<tr><td>22</td><td>XMM-LSS</td><td>20180504</td><td>20180504</td><td>8705837</td><td>21.7545793933</td><td>28241838720</td><td>28.24 GB</td></tr>\n",
        "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
        ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
        "display: inline-block; margin-right: 1em; }\n",
@@ -118,14 +118,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140000904617320-525715').dataTable()\");\n",
+       "    console.log(\"$('#table4709190344-918720').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140000904617320-525715').dataTable({\n",
+       "    $('#table4709190344-918720').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -139,7 +139,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,6 +282,165 @@
     "    \n",
     "depths_to_vo.close()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summarise completeness of HELP data set\n",
+    "\n",
+    "Here we get information about what is available on each field to summarise the data products available per field."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dr1_data_products = dr1.copy()\n",
+    "\n",
+    "fields_info = yaml.load(open(\"../dmu2/meta_main.yml\", 'r'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dr1_data_products.add_column(Column(data =np.full(len(dr1_data_products), 0, dtype=int), name = 'xid_objects'))\n",
+    "dr1_data_products.add_column(Column(data =np.full(len(dr1_data_products), 0, dtype=int), name = 'photoz_objects'))\n",
+    "dr1_data_products.add_column(Column(data =np.full(len(dr1_data_products), 0, dtype=int), name = 'cigale_objects'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AKARI-NEP\n",
+      "AKARI-SEP\n",
+      "Bootes\n",
+      "CDFS-SWIRE\n",
+      "COSMOS\n",
+      "EGS\n",
+      "ELAIS-N1\n",
+      "ELAIS-N2\n",
+      "ELAIS-S1\n",
+      "GAMA-09\n",
+      "GAMA-12\n",
+      "GAMA-15\n",
+      "HDF-N\n",
+      "Herschel-Stripe-82\n",
+      "Lockman-SWIRE\n",
+      "NGP\n",
+      "SA13\n",
+      "SGP\n",
+      "SPIRE-NEP\n",
+      "SSDF\n",
+      "xFLS\n",
+      "XMM-13hr\n",
+      "XMM-LSS\n"
+     ]
+    }
+   ],
+   "source": [
+    "for field in fields_info['fields']:\n",
+    "    print(field['name'])\n",
+    "    dr1_data_products['xid_objects'][dr1_data_products['field'] == field['name']] = xid_objects\n",
+    "    dr1_data_products['xid_objects'][dr1_data_products['field'] == field['name']] = xid_objects\n",
+    "    dr1_data_products['xid_objects'][dr1_data_products['field'] == field['name']] = xid_objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<i>Table length=23</i>\n",
+       "<table id=\"table4717607344\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th></tr></thead>\n",
+       "<thead><tr><th>bytes18</th><th>bytes20</th><th>bytes20</th><th>int64</th><th>float64</th><th>int64</th><th>bytes20</th></tr></thead>\n",
+       "<tr><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.19473235878</td><td>348848640</td><td>348.85 MB</td></tr>\n",
+       "<tr><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>8.71330647513</td><td>538606080</td><td>538.61 MB</td></tr>\n",
+       "<tr><td>Bootes</td><td>20180520</td><td>20180520</td><td>3481661</td><td>11.428152991</td><td>5002044480</td><td>5 GB</td></tr>\n",
+       "<tr><td>CDFS-SWIRE</td><td>20180613</td><td>20180613</td><td>2171051</td><td>12.9712464037</td><td>5705593920</td><td>5.71 GB</td></tr>\n",
+       "<tr><td>COSMOS</td><td>20180619</td><td>20180619</td><td>2599374</td><td>5.0838634785</td><td>10517175360</td><td>10.52 GB</td></tr>\n",
+       "<tr><td>EGS</td><td>20180501</td><td>20180501</td><td>1412613</td><td>3.56638327512</td><td>3808480320</td><td>3.81 GB</td></tr>\n",
+       "<tr><td>ELAIS-N1</td><td>20171016</td><td>20180216</td><td>4026292</td><td>13.5074845555</td><td>5242279680</td><td>5.24 GB</td></tr>\n",
+       "<tr><td>ELAIS-N2</td><td>20180218</td><td>20180218</td><td>1783240</td><td>9.16747990399</td><td>2007964800</td><td>2.01 GB</td></tr>\n",
+       "<tr><td>ELAIS-S1</td><td>20180416</td><td>20180416</td><td>1655564</td><td>9.00294064689</td><td>1970156160</td><td>1.97 GB</td></tr>\n",
+       "<tr><td>GAMA-09</td><td>20180601</td><td>20180601</td><td>12937982</td><td>62.0139341728</td><td>19911611520</td><td>19.91 GB</td></tr>\n",
+       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
+       "<tr><td>Herschel-Stripe-82</td><td>20180307</td><td>20180307</td><td>50196455</td><td>363.227479306</td><td>127047306240</td><td>127.05 GB</td></tr>\n",
+       "<tr><td>Lockman-SWIRE</td><td>20180219</td><td>20180219</td><td>4366298</td><td>22.4138634029</td><td>5195931840</td><td>5.2 GB</td></tr>\n",
+       "<tr><td>NGP</td><td>20180219</td><td>20180501</td><td>6759591</td><td>177.698197108</td><td>4954806720</td><td>4.95 GB</td></tr>\n",
+       "<tr><td>SA13</td><td>20180501</td><td>20180501</td><td>9799</td><td>0.274163793284</td><td>2721600</td><td>2.72 MB</td></tr>\n",
+       "<tr><td>SGP</td><td>20180221</td><td>20180221</td><td>29790690</td><td>294.56845409</td><td>45192530880</td><td>45.19 GB</td></tr>\n",
+       "<tr><td>SPIRE-NEP</td><td>20180220</td><td>20180220</td><td>2674</td><td>0.128066046938</td><td>1203840</td><td>1.2 MB</td></tr>\n",
+       "<tr><td>SSDF</td><td>20180221</td><td>20180221</td><td>12661903</td><td>111.116249493</td><td>8078319360</td><td>8.08 GB</td></tr>\n",
+       "<tr><td>xFLS</td><td>20180501</td><td>20180501</td><td>977148</td><td>7.44043242141</td><td>1050474240</td><td>1.05 GB</td></tr>\n",
+       "<tr><td>XMM-13hr</td><td>20180501</td><td>20180501</td><td>38629</td><td>0.757024016658</td><td>10676160</td><td>10.68 MB</td></tr>\n",
+       "<tr><td>XMM-LSS</td><td>20180504</td><td>20180504</td><td>8705837</td><td>21.7545793933</td><td>28241838720</td><td>28.24 GB</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=23>\n",
+       "      field        dr1_suffix last_suffix ... file_size_bytes file_size_readable\n",
+       "     bytes18        bytes20     bytes20   ...      int64           bytes20      \n",
+       "------------------ ---------- ----------- ... --------------- ------------------\n",
+       "         AKARI-NEP   20180215    20180215 ...       348848640          348.85 MB\n",
+       "         AKARI-SEP   20180221    20180221 ...       538606080          538.61 MB\n",
+       "            Bootes   20180520    20180520 ...      5002044480               5 GB\n",
+       "        CDFS-SWIRE   20180613    20180613 ...      5705593920            5.71 GB\n",
+       "            COSMOS   20180619    20180619 ...     10517175360           10.52 GB\n",
+       "               EGS   20180501    20180501 ...      3808480320            3.81 GB\n",
+       "          ELAIS-N1   20171016    20180216 ...      5242279680            5.24 GB\n",
+       "          ELAIS-N2   20180218    20180218 ...      2007964800            2.01 GB\n",
+       "          ELAIS-S1   20180416    20180416 ...      1970156160            1.97 GB\n",
+       "           GAMA-09   20180601    20180601 ...     19911611520           19.91 GB\n",
+       "               ...        ...         ... ...             ...                ...\n",
+       "Herschel-Stripe-82   20180307    20180307 ...    127047306240          127.05 GB\n",
+       "     Lockman-SWIRE   20180219    20180219 ...      5195931840             5.2 GB\n",
+       "               NGP   20180219    20180501 ...      4954806720            4.95 GB\n",
+       "              SA13   20180501    20180501 ...         2721600            2.72 MB\n",
+       "               SGP   20180221    20180221 ...     45192530880           45.19 GB\n",
+       "         SPIRE-NEP   20180220    20180220 ...         1203840             1.2 MB\n",
+       "              SSDF   20180221    20180221 ...      8078319360            8.08 GB\n",
+       "              xFLS   20180501    20180501 ...      1050474240            1.05 GB\n",
+       "          XMM-13hr   20180501    20180501 ...        10676160           10.68 MB\n",
+       "           XMM-LSS   20180504    20180504 ...     28241838720           28.24 GB"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dr1_data_products"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
